{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 13,
  "lineage": "2a5e4f2a-66a3-5fbc-3355-18847c98721c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "pushpakjha-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-05f501727bc2b2869",
            "domain": "vpc",
            "id": "eipalloc-08f8914dfcbb1ae4c",
            "instance": "i-0bb2109c3eab934d8",
            "network_interface": "eni-09a9390a9db10b230",
            "private_dns": "ip-10-0-60-151.us-west-2.compute.internal",
            "private_ip": "10.0.60.151",
            "public_dns": "ec2-44-236-190-151.us-west-2.compute.amazonaws.com",
            "public_ip": "44.236.190.151",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.pushpakjha-ec2",
            "aws_security_group.ingress-all",
            "aws_subnet.subnet-uno"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pushpakjha-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c1ab2d66f996cd4b",
            "arn": "arn:aws:ec2:us-west-2:372063237374:instance/i-0bb2109c3eab934d8",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bb2109c3eab934d8",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "pushpakjha_ssh_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09a9390a9db10b230",
            "private_dns": "ip-10-0-60-151.us-west-2.compute.internal",
            "private_ip": "10.0.60.151",
            "public_dns": "ec2-44-236-190-151.us-west-2.compute.amazonaws.com",
            "public_ip": "44.236.190.151",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-082cb21502ca42123",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0406c82d710b287fe",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cf3714eb97f62faf"
            ]
          },
          "dependencies": [
            "aws_security_group.ingress-all",
            "aws_subnet.subnet-uno"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pushpakjha-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:372063237374:internet-gateway/igw-0c4b6ba89ee65c578",
            "id": "igw-0c4b6ba89ee65c578",
            "owner_id": "372063237374",
            "tags": {
              "Name": "pushpakjha-gw"
            },
            "vpc_id": "vpc-0b1c45f665149005b"
          },
          "dependencies": [
            "aws_vpc.pushpakjha-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pushpakjha-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0912ce0c3e788b915",
            "owner_id": "372063237374",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c4b6ba89ee65c578",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pushpakjha-route-table"
            },
            "vpc_id": "vpc-0b1c45f665149005b"
          },
          "dependencies": [
            "aws_internet_gateway.pushpakjha-gw",
            "aws_vpc.pushpakjha-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079488d29f6412615",
            "route_table_id": "rtb-0912ce0c3e788b915",
            "subnet_id": "subnet-0406c82d710b287fe"
          },
          "dependencies": [
            "aws_internet_gateway.pushpakjha-gw",
            "aws_route_table.pushpakjha-route-table",
            "aws_subnet.subnet-uno",
            "aws_vpc.pushpakjha-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:372063237374:security-group/sg-0cf3714eb97f62faf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cf3714eb97f62faf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20201008210803116400000001",
            "name_prefix": null,
            "owner_id": "372063237374",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b1c45f665149005b"
          },
          "dependencies": [
            "aws_vpc.pushpakjha-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-uno",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:372063237374:subnet/subnet-0406c82d710b287fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.32.0/19",
            "id": "subnet-0406c82d710b287fe",
            "map_public_ip_on_launch": false,
            "owner_id": "372063237374",
            "vpc_id": "vpc-0b1c45f665149005b"
          },
          "dependencies": [
            "aws_vpc.pushpakjha-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pushpakjha-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:372063237374:vpc/vpc-0b1c45f665149005b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e046f146212365e3",
            "default_route_table_id": "rtb-038a657d59e52a89f",
            "default_security_group_id": "sg-0fc1cdce458297d59",
            "dhcp_options_id": "dopt-cf522ab7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b1c45f665149005b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-038a657d59e52a89f",
            "owner_id": "372063237374",
            "tags": {
              "Name": "pushpakjha-vpc"
            }
          }
        }
      ]
    }
  ]
}